...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="uFK-br-s8X">
                                <rect key="frame" x="20" y="283" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="tiresSwitch"/>
                                <connections>
                                    <action selector="tiresToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="dQE-PC-mUf"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Tires Package (Cost: 300)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="etn-PN-1D4">
                                <rect key="frame" x="86" y="288" width="200" height="21"/>
...
                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
                            </label>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="Qhe-Xi-iMe">
                                <rect key="frame" x="18" y="361" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="aeSwitch"/>
                                <connections>
                                    <action selector="aerodynamicEnchancementToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="cyF-8T-Nw2"/>
                                </connections>
                            </switch>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Time Remaining" textAlignment="right" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Ieq-eD-EjB">
                                <rect key="frame" x="271.5" y="54" width="122.5" height="21"/>
...
                                <connections>
                                    <action selector="finishButton:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Ify-PW-C2A"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="WLP-5H-Sdx">
                                <rect key="frame" x="170" y="183" width="74" height="30"/>
                                <accessibility key="accessibilityConfiguration" identifier="cycleCarsButton"/>
                                <state key="normal" title="Cycle Cars"/>
                                <connections>
                                    <action selector="cycleCars:" destination="BYZ-38-t0r" eventType="touchUpInside" id="aiD-we-0AS"/>
                                </connections>
                            </button>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="sq4-Cz-agK">
                                <rect key="frame" x="18" y="322" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="turboSwitch"/>
                                <connections>
                                    <action selector="turboToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="StF-8f-Tsw"/>
                                </connections>
                            </switch>
                            <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="V59-OK-DMb">
                                <rect key="frame" x="20" y="244" width="51" height="31"/>
                                <accessibility key="accessibilityConfiguration" identifier="engineAndExhaustSwitch"/>
                                <connections>
                                    <action selector="engineAndExhaustToggle:" destination="BYZ-38-t0r" eventType="valueChanged" id="5Jv-DK-GA4"/>
                                </connections>
                            </switch>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
