...
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="0" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Lbi-UH-whh">
                                <rect key="frame" x="46" y="140" width="322" height="80"/>
                                <accessibility key="accessibilityConfiguration" identifier="display"/>
                                <constraints>
                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="80" id="qM4-nz-LVZ"/>
                                </constraints>
                                <fontDescription key="fontDescription" type="system" pointSize="24"/>
                                <nil key="textColor"/>
                                <nil key="highlightedColor"/>
...
                                <connections>
                                    <action selector="enterOne:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Zdd-P2-2rO"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="vzN-ZF-iK1">
                                <rect key="frame" x="46" y="549" width="101" height="92"/>
                                <accessibility key="accessibilityConfiguration" identifier="eval"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="92" id="hpG-yr-rXb"/>
                                    <constraint firstAttribute="width" constant="101" id="wym-zA-hS4"/>
                                </constraints>
                                <state key="normal" title="EVAL">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                <connections>
                                    <action selector="enterMultiply:" destination="BYZ-38-t0r" eventType="touchUpInside" id="x2u-6h-bJ2"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="08S-J8-DOc">
                                <rect key="frame" x="219" y="654" width="149" height="52"/>
                                <accessibility key="accessibilityConfiguration" identifier="swapsign"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="149" id="IQx-Qm-eO4"/>
                                    <constraint firstAttribute="height" constant="52" id="RNW-kK-Jyh"/>
                                </constraints>
                                <state key="normal" title="+/-">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                <connections>
                                    <action selector="enterNine:" destination="BYZ-38-t0r" eventType="touchUpInside" id="L4v-vI-ATT"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="l47-Yu-XZ6">
                                <rect key="frame" x="267" y="549" width="101" height="92"/>
                                <accessibility key="accessibilityConfiguration" identifier="clear"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="101" id="AAi-4N-oZv"/>
                                    <constraint firstAttribute="height" constant="92" id="q42-Ze-cNK"/>
                                </constraints>
                                <state key="normal" title="CLR">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
...
                                <connections>
                                    <action selector="enterDivide:" destination="BYZ-38-t0r" eventType="touchUpInside" id="Egg-WU-PTj"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4vv-MO-YbB">
                                <rect key="frame" x="52" y="654" width="157" height="52"/>
                                <accessibility key="accessibilityConfiguration" identifier="enter"/>
                                <constraints>
                                    <constraint firstAttribute="width" constant="157" id="8zv-0S-Hxo"/>
                                    <constraint firstAttribute="height" constant="52" id="s1U-yZ-dV0"/>
                                </constraints>
                                <state key="normal" title="ENTER">
                                    <color key="titleColor" cocoaTouchSystemColor="darkTextColor"/>
...
